<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="false"
        android:key="status"
        android:summaryOff="@string/settings_status_off_summary"
        android:summaryOn="@string/settings_status_on_summary"
        android:switchTextOff="@string/settings_status_off"
        android:switchTextOn="@string/settings_status_on"
        android:title="@string/settings_status_title"
        app:isPreferenceVisible="false"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="expert"
        android:summary="@string/settings_expert_summary"
        android:title="@string/settings_expert_title"
        app:isPreferenceVisible="true"/>

    <EditTextPreference
        android:key="id"
        android:title="@string/settings_id_title" />

    <EditTextPreference
        android:key="boat_name"
        android:title="@string/setting_boat_name" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="trackingenabled"
        android:summaryOff="@string/settings_tracking_off_summary"
        android:summaryOn="@string/settings_tracking_on_summary"
        android:title="@string/settings_tracking_title"
        app:isPreferenceVisible="false"/>

    <EditTextPreference
        android:defaultValue="@string/settings_url_default_value"
        android:key="url"
        android:summary="@string/settings_url_summary"
        android:title="@string/settings_url_title"
        app:isPreferenceVisible="false"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="magnetic"
        android:summaryOff="@string/settings_magnetic_on_summary"
        android:summaryOn="@string/settings_magnetic_off_summary"
        android:title="@string/settings_magnetic_title"
        app:isPreferenceVisible="true"/>

    <ListPreference
        android:defaultValue="high"
        android:entries="@array/settings_accuracy_names"
        android:entryValues="@array/settings_accuracy_values"
        android:key="accuracy"
        android:summary="@string/settings_accuracy_summary"
        android:title="@string/settings_accuracy_title"
        app:isPreferenceVisible="false"/>

    <EditTextPreference
        android:defaultValue="8"
        android:key="interval"
        android:inputType="number"
        android:summary="@string/settings_interval_summary"
        android:title="@string/settings_interval_title"/>

    <EditTextPreference
        android:defaultValue="0"
        android:key="distance"
        android:inputType="number"
        android:summary="@string/settings_distance_summary"
        android:title="@string/settings_distance_title"
        app:isPreferenceVisible="false"/>

    <EditTextPreference
        android:defaultValue="0"
        android:key="angle"
        android:inputType="number"
        android:summary="@string/settings_angle_summary"
        android:title="@string/settings_angle_title"
        app:isPreferenceVisible="false"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="buffer"
        android:summaryOff="@string/settings_buffer_off_summary"
        android:summaryOn="@string/settings_buffer_on_summary"
        android:title="@string/settings_buffer"
        app:isPreferenceVisible="false"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wakelock"
        android:summaryOff="@string/settings_wakelock_off_summary"
        android:summaryOn="@string/settings_wakelock_on_summary"
        android:title="@string/settings_wakelock" />

</PreferenceScreen>
